Миграция задачи в BaseDict плюс куча всего

--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -109,7 +109,7 @@
                     </p:column>
                     
                     <p:column width="16" sortBy="#{task.iconName}" >
-                        <p:graphicImage value="/resources/icon/#{task.iconName}.png" /> 
+                        <p:graphicImage value="/resources/icon/ico_#{task.iconName}.png" /> 
                     </p:column>
                     
                     <p:column headerText="#{bundle.Result}" >
