Доработка Задачи и глобальное изменение закрытия view диалогов

--- a/escom-bpm-web/src/main/webapp/view/common/dict-info.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-info.xhtml
@@ -36,7 +36,7 @@
                 <ui:param name="_disabled" value="#{_bean.lockChangeOwner()}"/>
                 <ui:param name="_converter" value="usersConvertor" />
                 <ui:param name="_itemPanel" value="ownerPanel"/>
-                <ui:param name="_titleItem" value="#{bundle.ChangeOwner}"/>
+                <ui:param name="_titleItem" value="#{bundle.Owner}"/>
                 <ui:param name="_selectorBean" value="#{userBean}"/>
                 <ui:param name="_items" value="#{userBean.findAll()}"/>
                 <ui:param name="_actionClear" value="setAuthor"/>
